2.eks.new.VPC.ap-northeast-1/2.task/3.APP/01.test.apple_banana/5.1.hello.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
  namespace: infra
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-app
        image: 592806604814.dkr.ecr.ap-northeast-1.amazonaws.com/http-echo:latest
        args:
        - "-text=hello biz-think.net"
---
kind: Service
apiVersion: v1
metadata:
  name: hello-service
  namespace: infra
spec:
  selector:
    app: hello
  ports:
    - port: 5678 # Default port for image	
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bye-app
  namespace: infra
  labels:
    app: bye
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bye
  template:
    metadata:
      labels:
        app: bye
    spec:
      containers:
      - name: hello-app
        image: 592806604814.dkr.ecr.ap-northeast-1.amazonaws.com/http-echo:latest
        args:
        - "-text=bye biz-think.net"
---
kind: Service
apiVersion: v1
metadata:
  name: bye-service
  namespace: infra
spec:
  selector:
    app: bye
  ports:
    - port: 5678 # Default port for image
