2.eks.new.VPC.ap-northeast-1/2.task/3.APP/01.test.apple_banana/5.2.ingress.hello.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hell-ingress
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - host: bff.biz-think.net
    http:
      paths:
        - path: /hello
          backend:
            serviceName: hello-service 
            servicePort: 5678
        - path: /bye
          backend:
            serviceName: bye-service 
            servicePort: 5678
  # This section is only required if TLS is to be enabled for the Ingress
  #tls:
  #    - hosts:
  #        - www.example.com
  #      secretName: example-tls
